added new fun to add row

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       </tr>
     </table>
     <button id="undo-button">Undo</button>
+    <button id="add-row">Add Row</button>
     <script src="scripts.js"></script>
   </body>
 </html>
